--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="colorWhite">#fff</color>
     <color name="colorGreen">#32CD32</color>
     <color name="colorPrimaryText">#212121</color>
+    <color name="colorHome">#EBEBEB</color>
 
 </resources>
