--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,9 @@
         android:overScrollMode="never"
         android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@id/viewDivider"
-        app:layout_constraintTop_toBottomOf="@+id/headerLayout">
+        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="-26dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -84,8 +86,7 @@
                     android:text="@string/menu"
                     android:textColor="@color/colorBlack"
                     android:textSize="20dp"
-                    android:textStyle="bold"
-                    />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -94,11 +95,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
+                android:layout_marginRight="15dp"
                 android:background="@drawable/white_rectangle_back"
                 android:gravity="center"
-                android:layout_marginRight="15dp"
-                android:padding="15dp"
                 android:orientation="vertical"
+                android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -108,8 +109,7 @@
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
                     android:padding="8dp"
-                    android:src="@drawable/best_deal"
-                    />
+                    android:src="@drawable/best_deal" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -126,12 +126,12 @@
                 android:id="@+id/cardDesert"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="22dp"
                 android:background="@drawable/white_rectangle_back"
                 android:gravity="center"
-                android:layout_marginLeft="15dp"
-                android:padding="15dp"
                 android:orientation="vertical"
+                android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardMenu">
@@ -141,8 +141,7 @@
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
                     android:padding="8dp"
-                    android:src="@drawable/dessert"
-                    />
+                    android:src="@drawable/dessert" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -159,11 +158,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
+                android:layout_marginRight="15dp"
                 android:background="@drawable/white_rectangle_back"
                 android:gravity="center"
-                android:layout_marginRight="15dp"
-                android:padding="15dp"
                 android:orientation="vertical"
+                android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardDeal">
@@ -173,8 +172,7 @@
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
                     android:padding="8dp"
-                    android:src="@drawable/location_black"
-                    />
+                    android:src="@drawable/location_black" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -190,30 +188,55 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/recommend_back"
                 android:padding="20dp"
                 app:layout_constraintEnd_toEndOf="@id/cardLocation"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@id/cardMenu"
                 app:layout_constraintTop_toBottomOf="@id/cardDesert">
 
-                    <TextView
-                        android:id="@+id/textRecommend"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/white_rectangle_back"
-                        android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
-                        android:paddingTop="2dp"
-                        android:paddingEnd="8dp"
-                        android:paddingBottom="2dp"
-                        android:text="@string/recommend"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="14dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-                
+                <TextView
+                    android:id="@+id/textRecommend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/white_rectangle_back"
+                    android:paddingStart="8dp"
+                    android:paddingTop="2dp"
+                    android:paddingEnd="8dp"
+                    android:paddingBottom="2dp"
+                    android:text="@string/recommend"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="14dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:id="@+id/cardLogout"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/white_rectangle_back"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="15dp"
+                android:onClick="callLoginFromLogout"
+                app:layout_constraintDimensionRatio="H,1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cardLocation">
+
+                <TextView
+                    android:layout_width="58dp"
+                    android:layout_height="wrap_content"
+                    android:text="LogOut"
+                    tools:layout_editor_absoluteX="154dp"
+                    tools:layout_editor_absoluteY="349dp" />
+
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
