--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorHome"
     tools:context=".MainActivity">
-    
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headerLayout"
         android:layout_width="match_parent"
@@ -216,21 +216,20 @@
 
             <LinearLayout
                 android:id="@+id/cardLogout"
-                android:layout_width="90dp"
-                android:layout_height="50dp"
+                android:layout_width="80dp"
+                android:layout_height="45dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/white_rectangle_back"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
-                android:onClick="callLoginFromLogout"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardLocation">
 
                 <TextView
-                    android:layout_width="58dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="LogOut"
                     tools:layout_editor_absoluteX="154dp"
