--- a/app/src/main/res/layout/adapter_recycler_view.xml
+++ b/app/src/main/res/layout/adapter_recycler_view.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/image_receipt"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="25dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="19dp"
                     android:src="@{mkn.gambar}"
@@ -48,7 +48,7 @@
                     android:id="@+id/tvNama"
                     android:layout_width="142dp"
                     android:layout_height="17dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="5dp"
                     android:maxLines="1"
                     android:text="@{mkn.nama}"
@@ -71,12 +71,21 @@
                     app:layout_constraintTop_toBottomOf="@+id/tvNama" />
 
                 <TextView
+                    android:id="@+id/tvRupiah"
+                    android:layout_width="wrap_content"
+                    android:layout_height="21dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Rp. "
+                    app:layout_constraintStart_toStartOf="@+id/tvNama"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi" />
+
+                <TextView
                     android:id="@+id/tvHarga"
                     android:layout_width="56dp"
                     android:layout_height="21dp"
                     android:layout_marginTop="10dp"
                     android:text="@{mkn.stringharga}"
-                    app:layout_constraintStart_toStartOf="@+id/tvNama"
+                    app:layout_constraintStart_toEndOf="@+id/tvRupiah"
                     app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
