--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#000</color>
+    <color name="colorPrimary">#4264fb</color>
+    <color name="colorPrimaryDark">#0000ff</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#fff</color>
