--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:iconifiedByDefault="false"
-        android:queryHint="@string/search_name"
+        android:queryHint="SEARCH"
         android:inputType="text" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
