--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/cardDeal"
+                android:id="@+id/cardReservation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
@@ -97,13 +97,13 @@
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
                     android:padding="8dp"
-                    android:src="@drawable/best_deal" />
+                    android:src="@drawable/reservation" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/bestdeal"
+                    android:text="@string/reservation"
                     android:textColor="@color/colorBlack"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -111,7 +111,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/cardDesert"
+                android:id="@+id/cardProfile"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -129,13 +129,13 @@
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
                     android:padding="8dp"
-                    android:src="@drawable/dessert" />
+                    android:src="@drawable/profile" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/dessert"
+                    android:text="@string/profile"
                     android:textColor="@color/colorBlack"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -153,7 +153,7 @@
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardDeal">
+                app:layout_constraintTop_toBottomOf="@id/cardReservation">
 
                 <ImageView
                     android:layout_width="100dp"
@@ -173,40 +173,44 @@
 
             </LinearLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+
+
+            <LinearLayout
+                android:id="@+id/cardSetting"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_kotak"
-                android:padding="20dp"
-                app:layout_constraintEnd_toEndOf="@id/cardLocation"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@id/cardMenu"
-                app:layout_constraintTop_toBottomOf="@id/cardDesert">
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/white_rectangle_back"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="15dp"
+                app:layout_constraintDimensionRatio="H,1:1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardProfile">
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    android:padding="8dp"
+                    android:src="@drawable/settings" />
 
                 <TextView
-                    android:id="@+id/textRecommend"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/white_rectangle_back"
-                    android:paddingStart="8dp"
-                    android:paddingTop="2dp"
-                    android:paddingEnd="8dp"
-                    android:paddingBottom="2dp"
-                    android:text="@string/recommend"
+                    android:gravity="center"
+                    android:text="@string/settings"
                     android:textColor="@color/colorBlack"
-                    android:textSize="14dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/cardLogout"
-                android:layout_width="80dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="100dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/white_rectangle_back"
                 android:gravity="center"
@@ -216,39 +220,26 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardLocation">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="LogOut"
-                    android:textColor="@color/colorBlack"
-                    tools:layout_editor_absoluteX="154dp"
-                    tools:layout_editor_absoluteY="349dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/cardDarkmode"
-                android:layout_width="80dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/white_rectangle_back"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15dp"
-                app:layout_constraintDimensionRatio="H,1:1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardLogout">
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    android:padding="8dp"
+                    android:src="@drawable/logout" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="DarkMode"
+                    android:gravity="center"
+                    android:text="@string/logout"
                     android:textColor="@color/colorBlack"
-                    tools:layout_editor_absoluteX="154dp"
-                    tools:layout_editor_absoluteY="349dp" />
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
+
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
