--- a/app/src/main/res/layout/activity_menu_makanan.xml
+++ b/app/src/main/res/layout/activity_menu_makanan.xml
@@ -16,7 +16,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints"></ImageView>
+            tools:ignore="MissingConstraints">
+
+
+        </ImageView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_makanan"
