--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -25,8 +25,14 @@
             android:src="@drawable/ic_arrow_back_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
+        <ImageView
+            android:id="@+id/camera_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="128dp"
+            android:src="@drawable/ic_baseline_add_a_photo_24"
+            app:layout_constraintStart_toEndOf="@+id/imgUser"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
             android:id="@+id/imgUser"
@@ -38,7 +44,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+
             <ImageView
+                android:id="@+id/view_foto"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="9dp"
@@ -46,6 +54,7 @@
                 android:background="@drawable/circle"
                 android:padding="3dp"
                 android:scaleType="centerInside" />
+
 
         </RelativeLayout>
 
